--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-305.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-9.20MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-416.5KB/s(Youtube:不良林), server: 5.183.176.94, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-5.46MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.32MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
+  - {name: 🇨🇳 中国-3.97MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-267.2KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-308.7KB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-364.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-580.4KB/s(Youtube:不良林), server: 5.183.176.81, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-512.6KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
   - {name: 🇨🇳 中国-796.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-969.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇬🇧 英国-2.08MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇦🇺 澳大利亚-971.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-267.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-971.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-267.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-971.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-267.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-971.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-9.20MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-267.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-971.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-267.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-971.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-267.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-971.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-9.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-267.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-308.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-512.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-971.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
