--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-201.4KB/s(Youtube:不良林), server: 5.183.176.81, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-401.7KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-520.1KB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-338.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.18MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-804.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-796.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 5.183.176.84, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-364.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.38MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
   - {name: 🇺🇸 美国-481.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-320.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-520.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-804.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-320.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-520.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-804.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-320.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-520.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-804.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-320.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-520.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-804.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-320.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-520.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-804.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-320.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-520.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-804.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-320.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-401.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-520.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-804.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-320.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
