--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.44MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-428.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-7.30MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-201.4KB/s(Youtube:不良林), server: 5.183.176.81, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-704.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.94MB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-464.8KB/s(Youtube:不良林), server: 5.183.176.94, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1014.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-298.6KB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-704.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.38MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
+  - {name: 波兰-1.83MB/s(Youtube:不良林), server: 217.30.10.66, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇨🇳 台湾-8.48MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-749.5KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-428.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-464.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1014.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-428.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-464.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1014.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-428.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-464.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1014.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-428.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-464.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1014.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-428.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-464.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1014.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-428.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-464.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1014.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-428.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-201.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-464.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1014.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
