--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-1.94MB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-298.6KB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-704.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.38MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
-  - {name: 波兰-1.83MB/s(Youtube:不良林), server: 217.30.10.66, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇨🇳 台湾-8.48MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇯🇵 日本-311.3KB/s(Youtube:不良林), server: 5.183.176.93, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-749.5KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇯🇵 日本-353.8KB/s(Youtube:不良林), server: 5.183.176.84, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 波兰-1.83MB/s(Youtube:不良林), server: 217.30.10.66, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇯🇵 日本-490.2KB/s(Youtube:不良林), server: 5.183.176.96, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-538.5KB/s(Youtube:不良林), server: 5.183.176.93, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-503.2KB/s(Youtube:不良林), server: 5.183.176.91, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-387.8KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 捷克-1.29MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
+      - 捷克-1.29MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
+      - 捷克-1.29MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
+      - 捷克-1.29MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
+      - 捷克-1.29MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
+      - 捷克-1.29MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
+      - 捷克-1.29MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-927.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-298.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.38MB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-749.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
+      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
+      - 捷克-1.29MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
